--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d878d1">  <td>20/05/17 17:11:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestSetup.close()[pri:0, instance:com.clearcode.testsuite.TestSuite1@64729b1e]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="85bdee">  <td>20/05/17 17:10:58</td>   <td>-10583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient()[pri:1, instance:com.clearcode.testsuite.TestSuite1@64729b1e]">createPatient</td> 
-  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/17 17:10:51</td>   <td>-17837</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.launch()[pri:0, instance:com.clearcode.testsuite.TestSuite1@64729b1e]">&gt;&gt;launch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/17 17:10:54</td>   <td>-15009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@64729b1e]">&gt;&gt;loadUrl</td> 
-<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestSetup.close()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="85bdee">  <td>20/05/24 16:51:08</td>   <td>-4774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
+  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>-45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
+  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
+  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
+  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
+  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/05/24 16:50:57</td>   <td>-15962</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.launch()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;launch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/05/24 16:51:03</td>   <td>-9495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
+<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>-57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
+<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
+<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
+<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
+<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
 </table>
