--- a/ATU Reporter/Results/ConsolidatedPage.html
+++ b/ATU Reporter/Results/ConsolidatedPage.html
@@ -77,7 +77,13 @@
  <li class="menuStyle"><a href="Run_6/CurrentRun.html" >Run 6 </a></li>
 
 
- <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_7/CurrentRun.html" >Run 7 </a></li>
+ <li class="menuStyle"><a href="Run_7/CurrentRun.html" >Run 7 </a></li>
+
+
+ <li class="menuStyle"><a href="Run_8/CurrentRun.html" >Run 8 </a></li>
+
+
+ <li style="padding-top: 4px;padding-bottom: 4px;"><a href="Run_9/CurrentRun.html" >Run 9 </a></li>
 
 
                     </ul>
