--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d878d1">  <td>20/05/24 16:50:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.launch()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;launch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/24 16:51:03</td>   <td>6467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
-<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="85bdee">  <td>20/05/24 16:51:08</td>   <td>11188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
-  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>15905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
-<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>15917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
-  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>15928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
-<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>15929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
-  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>15939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
-<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>15940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
-  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>15951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&gt;&gt;loadUrl</td> 
-<td>&nbsp;</td>  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="85bdee">  <td>20/05/24 16:51:13</td>   <td>15952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.createPatient(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">createPatient</td> 
-  <td>main@1177377518</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/05/24 16:51:13</td>   <td>15962</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestSetup.close()[pri:0, instance:com.clearcode.testsuite.TestSuite1@10bbd20a]">&lt;&lt;close</td> 
+<tr bgcolor="809967">  <td>20/05/31 16:26:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.launch()[pri:0, instance:com.clearcode.testsuite.TestSuite1@54d9d12d]">&gt;&gt;launch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@515715487</td>   <td></td> </tr>
+<tr bgcolor="809967">  <td>20/05/31 16:26:06</td>   <td>2982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestSetup.loadUrl()[pri:0, instance:com.clearcode.testsuite.TestSuite1@54d9d12d]">&gt;&gt;loadUrl</td> 
+<td>&nbsp;</td>  <td>main@515715487</td>   <td></td> </tr>
+<tr bgcolor="aad17b">  <td>20/05/31 16:26:43</td>   <td>40184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSuite1.searchPatient(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.clearcode.testsuite.TestSuite1@54d9d12d]">searchPatient</td> 
+  <td>main@515715487</td>   <td></td> </tr>
+<tr bgcolor="809967">  <td>20/05/31 16:26:44</td>   <td>40204</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestSetup.close()[pri:0, instance:com.clearcode.testsuite.TestSuite1@54d9d12d]">&lt;&lt;close</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
